Refactor grounded refill to quantity-based multi-supply workflow